--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">美琪天气</string>
+    <string name="yoyo_name">天气预报</string>
+    <string name="signup_agreeTerms">github地址:<a href="https://github.com/Oreo-8/MeiQiWeather">www.github.com</a></string>
 </resources>
